# gestione-donatori

./: .coveragerc  .env.default  .flake8  .gitignore  .python-version  CLAUDE.md  LICENSE  Makefile  Pipfile  Procfile  README.md  pyproject.toml  requirements.txt  requirements_deploy.txt  requirements_dev.txt
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: django.yml
avis/: admin.py  apps.py  forms.py  functions.py  models.py  serializers.py  urls.py  views.py
avis/fixtures/: avis.json
avis/management/commands/: avis_import_dotnet_data.py
avis/migrations/: 0001_sezione.py  0002_sesso_statodonatore.py  0003_sesso_statodonatore_initial_data.py  0004_donatore.py  0005_donazione.py  0006_alter_donazione_tipo_donazione.py  0007_sezione_fields_stampa_benemerenze.py  0008_rename_num_tessera_donatore_num_tessera_avis.py  0009_rename_num_tessera_cartacea_donatore_num_tessera_ct.py  0010_donatore_luogo_nascita.py  0011_removing_piastrine_from_donazioni.py  0012_alter_donazione_tipo_donazione.py  0013_donatore_scheda_anamnestica.py  0014_donatore_motivo_inattivita.py  0015_donatore_stampa_donatore.py  0016_statodonatore_can_export_elenco_soci_xls.py  0017_donatore_data_cessata_iscrizione.py  0018_donatore_check_privacy_donatore_check_privacy_date.py  0019_alter_donazione_tipo_donazione.py  0020_rename_num_benemerenze_donatore_num_benemerenze_consegnate.py  0021_sezione_configurazione_benemerenze.py
avis/static/css/: avis.css
avis/static/js/: base.js  dati-statistici.js  login.js  print-on-load.js  print.js
avis/templates/avis/: base.html  dati_statistici.html  donatore.html  donatore_detail.html  donatore_list.html  donatore_list_benemerenze.html  donatore_list_elenco.html  donatore_list_emails.html  donatore_list_etichette.html  donatori.html  donazione_form.html  index.html
avis/templates/avis/includes/: donatore_benemerenza.html  donatore_etichetta.html  donatore_riga.html
avis/templates/registration/: login.html
avis/tests/: conftest.py  test_models.py  test_views.py  tests_api.py
website/: asgi.py  settings.py  settings_base.py  settings_deploy.py  settings_test.py  urls.py  wsgi.py
