[tool.isort]
profile = 'black'

[tool.black]
# skip-string-normalization = 1

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "website.settings"
addopts = "-x --cov"

[tool.poetry]
name = "gestione-donatori"
version = "0.1.0"
description = ""
authors = ["Denny Biasiolli <dennybiasiolli@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django-filter = "^25.1"
django-reversion = "^5.1.0"
djangorestframework = "^3.16.0"
django = "^5.2.3"
djangorestframework-simplejwt = "^5.5.0"
markdown = "^3.8"
openpyxl = "^3.1.5"
psycopg = "^3.2.9"
python-dotenv = "^1.1.1"


[tool.poetry.group.deploy.dependencies]
gunicorn = "^23.0.0"
uvicorn = "^0.35.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"
pytest-django = "^4.11.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
