[project]
name = "gestione-donatori"
version = "0.1.0"
description = ""
authors = [{ name = "Denny Biasiolli", email = "dennybiasiolli@users.noreply.github.com" }]
requires-python = ">=3.13,<3.14"
readme = "README.md"
dependencies = [
    "django-filter~=25.1",
    "django-reversion>=5.1.0,<7",
    "djangorestframework>=3.16.1,<4",
    "django>=5.2.5,<6",
    "djangorestframework-simplejwt>=5.5.1,<6",
    "markdown~=3.8",
    "openpyxl>=3.1.5,<4",
    "psycopg>=3.2.9,<4",
    "python-dotenv>=1.1.1,<2",
]

[tool.isort]
profile = 'black'

[dependency-groups]
deploy = [
    "gunicorn>=23.0.0,<26",
    "uvicorn>=0.35.0,<0.42",
    "uvicorn-worker>=0.3.0",
]
dev = [
    "black>=25.1.0,<26",
    "flake8>=7.3.0,<8",
    "isort>=6.0.1,<8",
    "pytest-django>=4.11.1,<5",
    "pytest-cov>=6.2.1,<8",
]

[tool.black]

[tool.uv]
package = false
default-groups = [
    "deploy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "website.settings"
addopts = "-x --cov"
